--- a/.jshintrc
+++ b/.jshintrc
@@ -35,7 +35,7 @@
 	"evil": false,
 	"expr": false,
 	"funcscope": false,
-	"globalstrict": false,
+	"globalstrict": true,
 	"iterator": false,
 	"lastsemic": false,
 	"laxbreak": false,
