--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "gulp-watch": "^0.5.3",
     "gulp-jshint": "^1.5.0",
     "gulp-nodeunit-runner": "^0.1.1"
+  },
+  "dependencies": {
+    "lodash": "^3.7.0"
   }
 }
